# foehncast

./: .dockerignore  .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  SECURITY.md  SUBMISSION.md  config.yaml  docker-compose.cloud.yml  docker-compose.gcp.yml  docker-compose.objectstore.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  promote-candidate.yml  publish-app-image.yml  publish-composer-dags.yml  publish-images.yml  publish-runtime-images.yml  rollback-live-release.yml  terraform.yml  trigger-runtime-release.yml
.streamlit/: config.toml
cloudbuild/: airflow.yaml  app.yaml  grafana.yaml  images.yaml  mlflow.yaml  runtime-image.yaml  ui.yaml
containers/: README.md
containers/airflow/: Dockerfile  docker-compose.yml  init-airflow.sh  start-airflow-dag-processor.sh  start-airflow-scheduler.sh  start-airflow-triggerer.sh  start-airflow-webserver.sh  webserver_config.py  webserver_config_cloud.py
containers/app/: Dockerfile  docker-compose.yml  start-app.sh
containers/development_env/: Dockerfile  docker-compose.yml  start-development-env.sh  start-jupyter-server.sh
containers/feast_online_store/: Dockerfile  docker-compose.yml
containers/grafana/: Dockerfile  entrypoint.sh
dags/: drift_dag.py  feature_dag.py  inference_dag.py  runtime_release_dag.py  training_dag.py
docs/: mkdocs.yml
feature_repo/: README.md  feature_store.gcp.yaml.example  feature_store.yaml  features.py
notebooks/: feat_01_ingest_validation.ipynb
prometheus_config/: alerting_rules.yml  alerting_rules_test.yml  prometheus.yml  statsd_metrics-mapping.yml
reports/: train_metrics.json
scripts/: airflow-api-common.sh  backfill-bq-prediction-events.py  backfill-history.py  bootstrap-gcp.sh  bootstrap-local.sh  cli-common.sh  configure-github-actions.sh  env-file-common.sh  gcp-auth.sh  gcp-common.sh  github-common.sh  payload-check-common.sh  prepare-feast-cloud.sh  prepare-feast-local.sh  publish-composer-dags.sh  resolve-terraform-inputs.sh  setup-cloud-triggers.sh  smoke-bootstrap-only.sh  smoke-local-evaluator.sh  teardown-gcp.sh  terraform-platform-state.sh  terraform-remote.sh  trigger-runtime-release.sh
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  bigquery_fakes.py  gcs_fakes.py  mlflow_fixtures.py  prometheus_assertions.py  repo_helpers.py  test_airflow_api.py  test_ci_contract.py  test_cloud_operator_contract.py  test_composer_bundle.py  test_config.py  test_dags.py  test_dashboard.py  test_demo.py  test_dvc_contract.py  test_engineer.py  test_evaluate.py  test_feast_export.py  test_feast_runtime.py  test_hindcast.py  test_hosted_sync_prometheus.py  test_http_client.py  test_ingest.py  test_label.py  test_monitoring_stack.py  test_online_compose_sync_prometheus.py  test_online_features.py  test_orchestration.py  test_pipeline_metrics.py  test_pipeline_prometheus.py  test_pre_dvc_baseline.py  test_predict.py  test_prediction_log.py  test_prediction_monitoring_prometheus.py  test_prediction_prometheus.py  test_promote.py  test_provenance.py  test_rank.py  test_register.py  test_rollback.py  (+5 more)
ui/: _control.py  _dial_svg.py  _dial_tokens.py  _gcp.py  _promql.py  _rider_console.py  _sidebar.py  _styles.py  _system_tab.py  _wind_map.py  app.py
(+197 files in other folders)
