[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foehncast"
version = "0.1.0"
description = "Personalized kiteboarding forecast system with FTI pipeline"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.0",
    "ipykernel>=6.0",
]
docs = [
    "mkdocs-material>=9.6.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
