[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foehncast"
version = "0.1.0"
description = "Personalized kiteboarding forecast system with FTI pipeline"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.0",
    "fastapi>=0.115",
    "google-cloud-bigquery>=3.30.0",
    "matplotlib>=3.8",
    "mlflow>=3.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "prometheus-client>=0.25.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "scikit-learn>=1.5",
    "s3fs>=2024.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.0",
    "ipykernel>=6.0",
]
docs = [
    "mkdocs-material>=9.6.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
]
feast = [
    "feast[gcp]>=0.63.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
