[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foehncast"
version = "0.1.0"
description = "Personalized kiteboarding forecast system with FTI pipeline"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Javier Hernandez", email = "javier.hernandez@stud.hslu.ch" },
]
dependencies = [
    "certifi>=2024.0",
    "fastapi>=0.115",
    "google-cloud-bigquery>=3.30.0",
    "google-cloud-secret-manager>=2.23.0",
    "google-cloud-storage>=2.19.0",
    "matplotlib>=3.8",
    "mlflow>=3.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "prometheus-client>=0.25.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "scikit-learn>=1.5",
    "s3fs>=2024.0",
    "streamlit>=1.45",
    "uvicorn>=0.30",
    "evidently>=0.7.21",
]

[project.urls]
Repository = "https://github.com/javihslu/foehncast"
Documentation = "https://javihslu.github.io/foehncast/"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.0",
    "ipykernel>=6.0",
    "jupyterlab>=4.2.0",
    "dvc>=3.50",
    "dvc-s3>=3.0",
]
docs = [
    "mkdocs-material>=9.6.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
]
feast = [
    "feast[gcp]>=0.63.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["src/foehncast"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
